# EFundAnalysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  app.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
.cursor/rules/: liquid-prompt.mdc  my-project-rule.mdc  overall-rule.mdc  python-agent-rule.mdc  python-api-rule.mdc  python-data-akshare.mdc  python-dev-ui.mdc  python-kyc-module.mdc  python-llm-rule.mdc  python-test.mdc
.github/instructions/: akshre.instructions.md  fastapi.instructions.md  kyc.instructions.md  liquid-prompt.instructions.md  llm.instructions.md  overall.instructions.md  test.instructions.md
.github/workflows/: build.yml
analyzer/: __init__.py  portfolio_analyzer.py
api/chat/: __init__.py  chat.py
api/observability/: health.py
core/agent/: __init__.py  agent.py
core/kyc/: __init__.py
core/kyc/models/: __init__.py  customer.py
core/kyc/workflows/: __init__.py  kyc_agent.py  kyc_workflow.py
core/llm/: __init__.py  siliconflow.py
core/llm/agent/: __init__.py  agent.py  kyc_agent.py
core/llm/chat/: chatbot.py
core/llm/embedding/: __init__.py  siliconflow.py
core/llm/memory/: __init__.py  memory.py
core/llm/model/: __init__.py  aopenai.py  factory.py
core/llm/prompt/: prompt_loader.py
core/llm/rag/: __init__.py  rag.py
core/llm/tool/: __init__.py  date_util.py
core/llm/workflow/: jokeflow.py
core/rag/: rag.py
core/sockets/: handler.py
core/util/: __init__.py  json_util.py
data_provider/: __init__.py  common_util.py  fund.py  stock.py
dev_ui/: README.md  __init__.py  app.py  config.js  http-utils.js  index.html
docker/: entrypoint.sh
extensions/: ext_blueprint.py  ext_cors.py  ext_error_handling.py  ext_logging.py
frontend/: DEPLOYMENT.md  QUICK_START.md  README.md  staticwebapp.config.json  web.config
frontend/react/: README.md  SELF_HOSTING.md  index.html  package-lock.json  package.json  start.sh  vite.config.js
frontend/react/src/: App.css  App.jsx  index.css
frontend/react/src/components/: ChatContainer.jsx  ConfigPanel.jsx  Header.jsx  InputContainer.jsx
prompt/: asset_allocation.liquid  financial_assistant.liquid  intent_detection.liquid  investment_preference.liquid  investment_recommendation.liquid  kyc.liquid  risk_assessment.liquid
src/: main.py
src/analyzer/: portfolio_analyzer.py
src/core/: example.py
src/core/agent/: agent.py
src/core/llm/: siliconflow.py
src/core/rag/: __init__.py
src/data_provider/: __init__.py  fund.py
tests/: __init__.py  test_data_provider.py  test_portfolio_analyzer.py
tests/integration/: test_agent.py  test_chatbot.py  test_kyc_agent.py  test_kyc_workflow.py  test_memory.py  test_socket.py  test_utils.py
tests/mock/: mock_vector_store.py
tests/unit/: __init__.py  test_fund.py  test_memory.py  test_prompt_loader.py  test_stock.py
tools/: format  mypy_check  sync_rules_to_instructions
