[project]
name = "efund-analysis"
version = "0.1.0"
description = "E-Fund Analysis Project"
authors = [
    {name = "Jian Guo", email = "aliezted@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.13",
    "akshare>=1.16.64",
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "llama-index>=0.12.24",
    "llama-index-agent-openai>=0.4.6",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.3.25",
    "numpy>=1.24.3",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.39",
    "flask>=3.0.2",
    "flask-restful>=0.3.10",
    "werkzeug>=3.0.1",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=3.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.hatch.build.targets.wheel]
packages = [
    "analyzer",
    "core",
    "data_provider",
] 