[project]
name = "FinWeave"
version = "0.1.0"
description = "FinWeave is a multi-agent AI system that automates sophisticated financial analysis and decision-making, simulating a dedicated team of analysts, researchers, and risk managers for you."
authors = [
    {name = "Jian Guo", email = "aliezted@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.13",
    "akshare>=1.16.64",
    "beautifulsoup4>=4.13.3",
    "httpx[socks]>=0.28.1",
    "llama-index~=0.14.8",
    "numpy>=1.24.3",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.39",
    "werkzeug>=3.0.1",
    "marshmallow>=3.21.1",
    "llama-index-llms-siliconflow~=0.4.2",
    "websockets>=15.0.1",
    "llama-index-llms-azure-openai~=0.4.2",
    "python-liquid>=2.1.0",
    "gevent>=25.9.1",
    "python-socketio>=5.15.0",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "eventlet>=0.40.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
# Show print statements and logging output
addopts = "-s -v --log-cli-level=INFO"
# Configure logging format for CLI output
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# Configure pytest-asyncio to automatically detect and run async test functions
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = [
    "analyzer",
    "core",
    "data_provider",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "mypy~=1.15.0",
    "ruff~=0.11.10",
    "dotenv-linter~=0.7.0",
    "pre-commit~=4.2.0",
    "pytest-asyncio>=1.3.0",
]
